--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
   <head></head>
   <body>
     <header></header>
-    <section>{% include search.html %}</section>
+    <section>{% include search %}</section>
     <section>{{ content }}</section>
     <footer></footer>
-    {% include scripts.html %}
+    {% include scripts %}
   </body>
 </html>
